--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "StudyCompanions",
+  "name": "StudyCompanion",
   "description": "The extension provides a gamified experience to help stay focused while studying with a virtual pet.",
   "version": "1.0",
   "manifest_version": 3,
