--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,12 @@
   "version": "1.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": "pet_face.png"
+    "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "images/icons/pet-16.png",
+    "32": "images/icons/pet-32.png",
+    "48": "images/icons/pet-48.png",
+    "128": "images/icons/pet-128.png"
   }
 }
